--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-loader": "^0.1.0",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
