Add candidate timeout french localisation

--- a/loc/en/game.ini
+++ b/loc/en/game.ini
@@ -11,3 +11,5 @@ incorrect-text = NO SIGNAL FOUND
 continue-text = NEXT LEVEL
 won-text = GAME WON
 lost-text = GAME OVER
+timeout-body-text = Do you need more time?
+timeout-button-text = Yes
