--- a/loc/fr/game.ini
+++ b/loc/fr/game.ini
@@ -11,3 +11,5 @@ incorrect-text = SIGNAL ABSENT
 continue-text = NIVEAU SUIVANT
 won-text = PARTIE GAGNÉE
 lost-text = PARTIE PERDUE
+timeout-body-text = Avez-vous besoin de plus de temps?
+timeout-button-text = Oui
