Corrections in loc/pl - endlines

--- a/loc/pl/endgame.ini
+++ b/loc/pl/endgame.ini
@@ -16,8 +16,7 @@ text = Dziękujemy za grę, niestety zabrakło Ci żyć. Proszę spróbować jes
 [learn]
 
 title = Dowiedz się więcej
-text = <a href="http://www.astro.cardiff.ac.uk/research/gravity/tutorial/" target="_blank">
-Strona grupy fizyki grawitacji Uniwersytetu w Cardiff </a> jest pełna zasobów, dzięki których można dowiedzieć się więcej o falach grawitacyjnych.
+text = <a href="http://www.astro.cardiff.ac.uk/research/gravity/tutorial/" target="_blank">Strona grupy fizyki grawitacji Uniwersytetu w Cardiff</a> jest pełna zasobów, dzięki których można dowiedzieć się więcej o falach grawitacyjnych.
 
 [do]
 
