--- a/loc/pl/tutorial.ini
+++ b/loc/pl/tutorial.ini
@@ -1,42 +1,25 @@
 [level-1]­
 
 title-1 = Witamy w Łowcy Czarnych Dziur
-text-1 = Twoim celem jest wysłuchanie poniższego sygnału, a następnie
-ustalenie, który z czterech plików danych zawiera ten sygnał. Na początek
-sygnały będą stosunkowo głośne. W miarę postępów w grze sygnały będą coraz
-cichsze.
+text-1 = Twoim celem jest wysłuchanie poniższego sygnału, a następnie ustalenie, który z czterech plików danych zawiera ten sygnał. Na początek sygnały będą stosunkowo głośne. W miarę postępów w grze sygnały będą coraz cichsze.
 
 title-2 = Posłuchaj sygnału
-text-2 = Kliknij na sygnał poniżej i naciśnij przycisk odtwarzania, aby go
-usłyszeć. Tak brzmiałaby fala grawitacyjna, gdyby nie było zakłóceń.
+text-2 = Kliknij na sygnał poniżej i naciśnij przycisk odtwarzania, aby go usłyszeć. Tak brzmiałaby fala grawitacyjna, gdyby nie było zakłóceń.
 
 title-3 = Posłuchaj danych
-text-3 = Kliknij w każdy z plików danych poniżej i naciśnij przycisk
-odtwarzania, aby je usłyszeć. Pliki te zawierają dane z detektora fal
-grawitacyjnych. Detektory nie są idealne, dlatego pliki danych zawierają szum.
-Jeden z tych plików zawiera sygnał ukryty w hałasie. Twoim celem jest
-znalezienie tego pliku danych.
+text-3 = Kliknij w każdy z plików danych poniżej i naciśnij przycisk odtwarzania, aby je usłyszeć. Pliki te zawierają dane z detektora fal grawitacyjnych. Detektory nie są idealne, dlatego pliki danych zawierają szum. Jeden z tych plików zawiera sygnał ukryty w hałasie. Twoim celem jest znalezienie tego pliku danych.
 
 title-4 = Dokonaj wyboru
-text-4 = Jeśli uważasz, że znalazłeś plik danych zawierający sygnał, naciśnij
-zielony symbol w prawym dolnym rogu okna. Jeśli znajdziesz odpowiedni sygnał,
-możesz przejść do następnego poziomu, jeśli nie, stracisz ,,życie’’. Zaczynasz
-z 3 ,,życiami’’.
+text-4 = Jeśli uważasz, że znalazłeś plik danych zawierający sygnał, naciśnij zielony symbol w prawym dolnym rogu okna. Jeśli znajdziesz odpowiedni sygnał, możesz przejść do następnego poziomu, jeśli nie, stracisz ,,życie’’. Zaczynasz z <b>trzema</b> ,,życiami’’.
 
 
 [level-3]­
 
-text = Teraz sprawimy, że szukanie stanie się nieco trudniejsze. Dane
-rzeczywistych interferometrów zawierają ,,usterki'' (zwane także ,,gliczami'').
-Są to krótkie i głośne trzaski w danych, które można pomylić sygnał fali
-grawitacyjnej, jeśli nie jesteś ostrożny.
+text = Teraz sprawimy, że szukanie stanie się nieco trudniejsze. Dane rzeczywistych interferometrów zawierają ,,usterki'' (zwane także ,,gliczami''). Są to krótkie i głośne trzaski w danych, które można pomylić sygnał fali grawitacyjnej, jeśli nie jesteś ostrożny.
 
 [level-5]
 
-text = Gdy sygnały stają się cichsze, a trzaski głośniejsze, będzie coraz
-trudniej wykryć fale grawitacyjne. Aby ci pomóc, zapewniamy ulepszenia. Możesz
-użyć ich tylko raz, ale będą one uzupełniane w niektórych punktach w trakcie
-gry. Przytrzymaj nad nimi kursor aby zobaczyć, jak działają.
+text = Gdy sygnały stają się cichsze, a trzaski głośniejsze, będzie coraz trudniej wykryć fale grawitacyjne. Aby ci pomóc, zapewniamy ulepszenia. Możesz użyć ich tylko raz, ale będą one uzupełniane w niektórych punktach w trakcie gry. Przytrzymaj nad nimi kursor aby zobaczyć, jak działają.
 
 [Level-9]
 
