--- a/loc/pl/quotes.ini
+++ b/loc/pl/quotes.ini
@@ -98,7 +98,7 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholeco
 
 [quote19]
 
-quote = Oznaczenie <b>czarna dziura</b> zostało wymyślone przez Johna Wheelera w 1967 roku. Chociaż czarne dziury są niewidoczne w promieniowaniu elektromagnetycznym, są najbardziej świecącymi obiektami, gdy emitują fale grawitacyjne.
+quote = Oznaczenie czarna dziura zostało wymyślone przez Johna Wheelera w 1967 roku. Chociaż czarne dziury są niewidoczne w promieniowaniu elektromagnetycznym, są najbardziej świecącymi obiektami, gdy emitują fale grawitacyjne.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote20]
