--- a/loc/pl/tutorial.ini
+++ b/loc/pl/tutorial.ini
@@ -10,7 +10,7 @@ title-3 = Posłuchaj danych
 text-3 = Kliknij w każdy z plików danych poniżej i naciśnij przycisk odtwarzania, aby je usłyszeć. Pliki te zawierają dane z detektora fal grawitacyjnych. Detektory nie są idealne, dlatego pliki danych zawierają szum. Jeden z tych plików zawiera sygnał ukryty w hałasie. Twoim celem jest znalezienie tego pliku danych.
 
 title-4 = Dokonaj wyboru
-text-4 = Jeśli uważasz, że znalazłeś plik danych zawierający sygnał, naciśnij zielony symbol w prawym dolnym rogu okna. Jeśli znajdziesz odpowiedni sygnał, możesz przejść do następnego poziomu, jeśli nie, stracisz ,,życie’’. Zaczynasz z <b>trzema</b> ,,życiami’’.
+text-4 = Jeśli uważasz, że znalazłeś plik danych zawierający sygnał, naciśnij zielony symbol w prawym dolnym rogu okna. Jeśli znajdziesz odpowiedni sygnał, możesz przejść do następnego poziomu, jeśli nie, stracisz ,,życie’’. Zaczynasz z 3. ,,życiami’’.
 
 
 [level-3]­
