Minor corrections in the translation

--- a/loc/hu/game.ini
+++ b/loc/hu/game.ini
@@ -5,7 +5,7 @@ signal-text = JEL
 data-text = ADAT
 mass-text = TÖMEG
 spin-text = PERDÜLET
-inclination-text = INKLINÁCIÓ
+inclination-text = PÁLYA DŐLÉSSZÖGE
 check-text = ADATOK ELLENŐRZÉSE
 correct-text = JEL MEGTALÁLVA
 incorrect-text = NINCS JEL
