--- a/loc/hu/index.ini
+++ b/loc/hu/index.ini
@@ -4,22 +4,22 @@ title = Magyar
 play-now = Játék indítása
 about = Információk
 home = Kezdőlap
-listen = Hallgasd meg az első felfedezést
+listen = Hallgasd meg az első észlelést
 
 [welcome]
 
 title = Halld meg az univerzumot
-text = Keress a Black Hole Hunter játékkal gravitációs hullámokat és ismerd meg Einstein örökségét.
+text = Keress a Black Hole Hunter játékkal gravitációs hullámokat és ismerd meg Einstein örökségét!
 
 [about]
 
 title = Információk
-text = Einstein általános relativitáselméletének segítségével a tudósok megjósolták, hogy két fekete lyuk összeütközésekor gravitációs hullámok keletkeznek, melyek minden irányban fénysebességgel terjednek.
-  Amikor ezek a gravitációs hullámok elérik a Földet, rövid rezgéseket hoznak létre, melyeket a LIGO gravitációs hullám detektorai érzékelni tudnak. Az észlelt adatok átalakíthatóak hanggá, így te is hallhatod
-  a fekete lyukak összeütközését. Azonban a detektoroknál észlelt rezgéseket más is létrehozhatja, pl. a világ másik felén történt földrengés vagy a néhány kilométerre elhaladó autóforgalom. Ezek jelentős zajt
-  okoznak a detektoroknál, ami megnehezíti a gravitációs hullám jelek megtalálását. A Black Hole Hunterben az a feladatod, hogy a detektorok adatait hallgatva meghatározd, hogy hallható-e gravitációs hullám a
-  hangfájlban vagy csupán zaj van. Kattints a <b>Játék indítása</b> gombra és halld meg az univerzum zenéjét...
+text = Einstein általános relativitáselmélete szerint két fekete lyuk összeütközésekor gravitációs hullámok keletkeznek, amelyek minden irányba fénysebességgel sugárzódnak szét.
+  Amikor ezek a gravitációs hullámok elérik a Földet, olyan rezgéseket keltenek, amelyeket a LIGO gravitációshullám-detektorai érzékelni tudnak. Az észlelt adatok hanggá alakíthatók, így Te is hallhatod
+  a fekete lyukak összeütközését. A detektoroknál észlelt rezgéseket azonban más is létrehozhatja, pl. a világ másik felén történt földrengés vagy a néhány kilométerre elhaladó autóforgalom. Ezek jelentős zajt
+  okoznak a detektoroknál, ami megnehezíti a gravitációshullám-jelek megtalálását. A Black Hole Hunterben az a feladatod, hogy a detektorok adatait hallgatva meghatározd, hogy jelen van-e gravitációs hullám az
+  adatokban, vagy csupán zaj van. Kattints a <b>Játék indítása</b> gombra és hallgasd az univerzum hangjait...
 
 [event]
 
-text = Hallgasd meg a GW150914-et, az első közvetlenül megfigyelt gravitációs hullámot.
+text = Hallgasd meg a GW150914 jelet, az első közvetlenül megfigyelt gravitációs hullámot!
