--- a/loc/hu/quotes.ini
+++ b/loc/hu/quotes.ini
@@ -2,48 +2,48 @@
 
 numquotes = 32
 title = Tudtad?
-weblink-text = Tudj meg többet
+weblink-text = Tudj meg többet!
 
 [quote1]
 
-quote = A fekete lyukak nem is teljesen feketék, például graviátciós hullámokat kibocsáthatnak.
+quote = A fekete lyukak nem is teljesen feketék, például gravitációs hullámokat kibocsáthatnak.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote2]
 
-quote = Az asztrofizikai fekete lyukakat mindössze két számmal lehet jellemezni, a tömegükkel és a perdületükkel. Ebben hasonlítanak az elemi részecskékre, mint például az elektron és a proton.
+quote = Az asztrofizikai fekete lyukakat mindössze két számmal lehet jellemezni, a tömegükkel és a perdületükkel. Ebben hasonlítanak az elemi részecskékre, mint amilyen például az elektron és a proton.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 
 [quote3]
 
-quote = Amennyiben a fekete lyukak formája egy kicsit eltér a gömbtől, lecsengő hullámokat bocsátanak ki, aminek a frekvenciája és a csillapítása egyedül a tömegétől és a perdületétől függ.
+quote = Amennyiben a fekete lyukak alakja egy kicsit eltér a gömbtől, lecsengő hullámokat bocsátanak ki, amiknek a frekvenciája és a csillapodása egyedül a fekete lyuk tömegétől és perdületétől függ.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 
 [quote4]
 
-quote = A szupermasszív fekete lyukak az összeolvadásukat megelőző egy évben több energiát bocsátanak ki gravitációs hullámok formájában, mint amennyit egy galaxis az egész létezése során elektromágneses hullám formájában kisugároz.
+quote = A szupernehéz fekete lyukak az összeolvadásukat megelőző egy évben több energiát bocsátanak ki gravitációs hullámok formájában, mint amennyit egy galaxis az egész létezése során elektromágneses hullámok formájában kisugároz.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=5super
 
 [quote5]
 
-quote = A Lézer-interferométer Űrantenna (LISA) egy olyan gravitációs hullám detektor, amelyet a NASA/ESA az űrben tervez építeni. Ennek a segítségével az univerzum bármely részén összeolvadó szupermasszív fekete lyukak észlelése válik lehetővé.
+quote = A Lézer-interferométer Űrantenna (LISA) egy olyan gravitációshullám-detektor, amelyet a NASA és az ESA az űrben tervez építeni. Ennek segítségével válik lehetővé az univerzum bármely részén összeolvadó szupernehéz fekete lyukak észlelése.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=5super
 
 [quote6]
 
-quote = A gamma-kitörések (GRB) a forrásai az általunk ismert legfényesebb elektromágneses sugárzásoknak. Ezek valószínűleg akkor keletkeznek, amikor két neutroncsillag vagy egy neutroncsillag és egy fekete lyuk összeolvad.
+quote = A gamma-kitörések a forrásai az általunk ismert legnagyobb energiájú elektromágneses sugárzásoknak. Ezek egy része valószínűleg akkor keletkezik, amikor két neutroncsillag vagy egy neutroncsillag és egy fekete lyuk összeolvad.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote7]
 
-quote = A gravitációs hullám detektorok minden irányba képesek érzékelni: egy tetszőleges időpontban az égbolt több, mint 40%-át képesek vizsgálni.
+quote = A gravitációshullám-detektorok minden irányba képesek érzékelni: egy tetszőleges időpontban az égbolt több, mint 40%-át tudják megfigyelni.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=7advancedligo
 
 [quote8]
 
-quote = A gravitációs hullám detektorok képesek egyszerre sokféle forrás keresésére is: összaolvadó fekete lyukak és neutroncsillagok, szupernóva-robbanások, gyorsan forgó neutroncsillagok, kozmikus húrok, stb.
+quote = A gravitációshullám-detektorok képesek egyszerre sokféle forrás keresésére is: összaolvadó fekete lyukak és neutroncsillagok, szupernóva-robbanások, gyorsan forgó neutroncsillagok, kozmikus húrok, stb.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/
 
 [quote9]
@@ -58,7 +58,7 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=3thehulsetay
 
 [quote11]
 
-quote = Tudtad, hogy a két fekete lyuk összeolvadása során létrejövő fekete lyuk megfelelő körülmények között akár a galaxisból is kirepülhet, miközben egy irányba gravitációs hullámot bocsát ki.
+quote = Tudtad, hogy a két fekete lyuk összeolvadása során létrejövő fekete lyuk megfelelő körülmények között akár a galaxisból is kirepülhet, miközben egy irányba gravitációs hullámot bocsát ki?
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholecollisions
 
 [quote12]
@@ -73,28 +73,27 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/researchactivities/
 
 [quote14]
 
-quote = Tudtad, hogy Freeman Dyson már 1960-ban rájött, hogy az összeolvadó fekete lyukak gravitációs hullámokat bocsáthatnak ki? Ekkor még fel sem merült senkiben, hogy gravitációs hullám detektorokat építsen.
+quote = Tudtad, hogy Freeman Dyson már 1960-ban rájött, hogy az összeolvadó fekete lyukak gravitációs hullámokat bocsáthatnak ki? Ekkor még fel sem merült senkiben, hogy gravitációshullám-detektorokat építsen.
 weblink =
 
 [quote15]
 
-quote = Tudtad, hogy a gravitációs sugárzásnak, csakúgy mint a rádióhullámoknak és más elektromágneses sugárzásfajtáknak, mindössze kétféle polarizációja létezik, csupán bonyolultabb formában.
+quote = Tudtad, hogy a gravitációs sugárzásnak, csakúgy mint a rádióhullámoknak és más elektromágneses sugárzásfajtáknak, mindössze kétféle polarizációja létezik, csupán bonyolultabb formában?
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=2theeffect
 
 [quote16]
 
-quote = Egy kettős fekete lyuk az összeolvadás előtti másodpercben százszor nnyi energiát bocsát ki gravitációs hullámok formájában, mint amennyit egey csillag az egész létezése során elektromágneses hullámok formájában kisugároz (ez több száz millió vagy akár milliárd év is lehet)!
- A black hole binary emits hundred times more energy in gravity waves in the last second of its life than a star of similar mass emits optical radiation in its entire life (100's of million to billions of years)!
+quote = Egy kettős fekete lyuk az összeolvadás előtti másodpercben százszor annyi energiát bocsát ki gravitációs hullámok formájában, mint amennyit egey csillag az egész létezése során elektromágneses hullámok formájában kisugároz (ez több száz millió vagy akár milliárd év is lehet)!
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholecollisions
 
 [quote17]
 
-quote = Tudtad, hogy összeolvadás előtt a feketelyukak közel fénysebességgel keringenek egymás körül?
+quote = Tudtad, hogy összeolvadás előtt a fekete lyukak közel fénysebességgel keringenek egymás körül?
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholecollisions
 
 [quote18]
 
-quote = Az összeolvadás végső szakaszában a feketelyukak tömegük 5%-át elveszítik gravitációs sugárzás formájában. Ezzel ők a legnagyobb luminozitású égitestek az univerzumban!
+quote = Az összeolvadás végső szakaszában a fekete lyukak tömegük 5%-át elveszítik gravitációs sugárzás formájában. Ezzel ők a legnagyobb luminozitású égitestek az univerzumban!
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholecollisions
 
 [quote19]
@@ -104,17 +103,17 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote20]
 
-quote = Tudtad, hogy a Tejútrendszer közepén egy 4 millió naptömegű fekete lyuk található? Az asztronómusok úgy vélik, hogy minden galaxis közepén egy hasonlóan nagy vagy akár ezerszer ekkora tömegű fekete lyuk van.
+quote = Tudtad, hogy a Tejútrendszer közepén egy 4 millió naptömegű fekete lyuk található? A csillagászok úgy vélik, hogy minden galaxis közepén egy hasonlóan nagy vagy akár ezerszer ekkora tömegű fekete lyuk van.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=5super
 
 [quote21]
 
-quote = A kozmológia egyik legnagyobb kérdése, hogy hogyan keletkezhettek a galakisok közepén lévő fekete lyukak. A gravitációs hullám megfigyelések segíthetnek ezt megérteni azáltal, hogy közvetlenül vizsgálhatjuk a keletkezésüket a korai univerzumban.
+quote = A kozmológia egyik legnagyobb kérdése, hogy hogyan keletkezhettek a galaxisok közepén lévő fekete lyukak. A gravitációshullám-megfigyelések segíthetnek ezt megérteni azáltal, hogy közvetlenül vizsgálhatjuk a keletkezésüket a korai univerzumban.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=5super
 
 [quote22]
 
-quote = Roger Penrose brit matematikus azt feltételezte, hogy a szingularitások (olyan helyek, ahol a gravitációs mez nagyon erős) körül olyan határok vannak, amiken belülre már nem láthatunk. A gravitációs hullámok megfigyelése egy nap segíthet ellenőrizni ezt az elméletet.
+quote = Roger Penrose brit matematikus azt feltételezte, hogy a szingularitások (olyan helyek, ahol a gravitációs mező nagyon erős) körül olyan határok vannak, amiken belülre már nem láthatunk. A gravitációs hullámok megfigyelése egy nap segíthet ellenőrizni ezt az elméletet.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote23]
@@ -129,7 +128,7 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote25]
 
-quote = Vajon ha egy neutroncsillag tömege lassan növekszik, akkor fekete lyukká fog összeomlani, vagy az anyag valamilyen egzotikus formája fog létrejönni? A választ nem ismerjük, de a gravitációs hullám megfigyelések segíthetnek ennek az eldöntésében.
+quote = Vajon ha egy neutroncsillag tömege lassan növekszik, akkor fekete lyukká fog összeomlani, vagy az anyag valamilyen egzotikus formája fog létrejönni? A választ nem ismerjük, de a gravitációshullám-megfigyelések segíthetnek ennek az eldöntésében.
 weblink =
 
 [quote26]
@@ -139,7 +138,7 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=1blackholes
 
 [quote27]
 
-quote = A fekete lyukak - az elemi részecskékhez hasonlóan - valóban jellemezhetők mindössze két fizikai mennyiséggel, a tömegükkel és a saját-impulzusmomentumukkal? A LISA segíthet ezt megválaszolni a fekete lyukak körüli téridő geometriájának elemzésével.
+quote = A fekete lyukak - az elemi részecskékhez hasonlóan - valóban jellemezhetők mindössze két fizikai mennyiséggel, a tömegükkel és a sajátperdületükkel? A LISA segíthet ezt megválaszolni a fekete lyukak körüli téridő geometriájának elemzésével.
 weblink =
 
 [quote28]
@@ -154,7 +153,7 @@ weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=4blackholeco
 
 [quote30]
 
-quote = Az interferometrikus gravitációshullám detektorok képesek a karjaik hosszának olyan kis változásait is érzékelni, mint az atommag méretének ezredrésze.
+quote = Az interferometrikus gravitációshullám-detektorok képesek a karjaik hosszának olyan kis változásait is érzékelni, mint az atommag méretének ezredrésze.
 weblink = http://www.astro.cf.ac.uk/research/gravity/tutorial/?page=7advancedligo
 
 [quote31]
