--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Galadirith/black-hole-hunter.git"
+    "url": "git+https://github.com/cardiffgravity/black-hole-hunter.git"
   },
   "keywords": [
     "gravitational",
@@ -21,22 +21,15 @@
     "outreach"
   ],
   "bugs": {
-    "url": "https://github.com/Galadirith/black-hole-hunter/issues"
+    "url": "https://github.com/cardiffgravity/black-hole-hunter/issues"
   },
-  "homepage": "https://github.com/Galadirith/black-hole-hunter",
+  "homepage": "https://github.com/cardiffgravity/black-hole-hunter",
   "devDependencies": {
-    "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.12.3",
-    "css-loader": "^0.26.1",
-    "extract-loader": "^0.1.0",
-    "file-loader": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.3.0",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.2"
+    "coffee-loader": "4.0.0",
+    "file-loader": "6.2.0",
+    "raw-loader": "4.0.2",
+    "style-loader": "3.3.1",
+    "webpack": "5.75.0",
+    "webpack-dev-server": "4.11.1"
   }
 }
